/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/lab_query.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto";
option java_outer_classname = "DeviceQuery";

// For filtering devices.
// Use DeviceQueryFilter instead.
message DeviceFilter {
  option deprecated = true;

  optional string serial_regex = 1;
  optional string status_regex = 2;
  optional string owner_regex = 3;
  optional string type_regex = 4;
  optional string driver_regex = 5;
  repeated string decorator_regex = 6;
  repeated DimensionFilter dimension_query = 7;
  optional LabFilter lab_query = 8;
}

// For filtering dimensions.
message DimensionFilter {
  option deprecated = true;

  required string name = 1;
  required string value_regex = 2;
}
